# 
# http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

Hedgehog 2.2.0 - 2016-08-31
-----------------------------
* Added new dataset and plot dnskey_vs_asn


Hedgehog 2.1.1 - 2016-08-16
-----------------------------
* Fix issue with database_manage_partitions script where generating tables for
  -09 and -10 months didn't work
* Add additional check on input parameters
* Modify instructions due to issue with latest build of rcpp
* Migrate to install from packages only from 2.1.1


Hedgehog 2.1.0 - 2016-06-20
------------------------------
* Production release of 'Daurian'


Hedgehog 2.1.0rc3 - 2016-06-01
------------------------------
* Add option to specify number of processes for refile_and_grok to use
* Fix connection issue in update_tlds_from_zone script
* Make hedgehogctl produce correct tools list for split installs
* Minor documentation fixes


Hedgehog 2.1.0rc2 - 2016-05-19
------------------------------
* Add default server for drop down as a config option
* Fix alphabetical sorting of Country/City/Instance in node tab
* Fix detection of correct user when running from cron jobs


Hedgehog 2.1.0rc1 - 2016-05-09
------------------------------
* Updated packaging now that RPostgreSQL is available (thanks to Ondrej Sury)


Hedgehog 2.1.0b2 - 2016-04-20
-----------------------------

* Add release name of "Daurian" for 2.1
* Add script to update TLDs from IANA
* Updates to documentation
* Bug fix to handling of nodes.csv input
* Ensure output format consistent with latest RSSAC02 specs
* Fix issues with rssacd
* Support '.' in server names
* Move webdav config
* Fix issues with jquery dependancies


Hedgehog 2.1.0b1 - 2016-02-01 