@@ -47,9 +47,8 @@ prepStmnt <- function(statementNm, dsccon){
                by_node                              = { rs <- try(dbSendQuery(dsccon, "PREPARE by_node                              (INTEGER, INTEGER, TIMESTAMPTZ, TIMESTAMPTZ, TEXT) AS           select to_timestamp((extract(epoch from sq.sx)::int / (extract(epoch from $4::timestamp - $3::timestamp + interval '1 minute')/1440)::int )*(extract(epoch from $4::timestamp - $3::timestamp + interval '1 minute')/1440)::int) AS x, sq.skey as key, avg(sq.sy) as y from (SELECT d.starttime AS sx, n.name AS skey, sum(d.value)/60.0 AS sy FROM dsc.data d, dsc.node n WHERE d.node_id = n.id AND d.server_id=$1 AND d.plot_id=$2 AND d.starttime>=$3 AND d.starttime<=$4 AND d.node_id = ANY (string_to_array($5, ',')::integer[]) GROUP BY sx, skey) as sq GROUP BY x, key;"))},
                by_node_all_nodes                    = { rs <- try(dbSendQuery(dsccon, "PREPARE by_node_all_nodes                    (INTEGER, INTEGER, TIMESTAMPTZ, TIMESTAMPTZ) AS                 select to_timestamp((extract(epoch from sq.sx)::int / (extract(epoch from $4::timestamp - $3::timestamp + interval '1 minute')/1440)::int )*(extract(epoch from $4::timestamp - $3::timestamp + interval '1 minute')/1440)::int) AS x, sq.skey as key, avg(sq.sy) as y from (SELECT d.starttime AS sx, n.name AS skey, sum(d.value)/60.0 AS sy FROM dsc.data d, dsc.node n WHERE d.node_id = n.id AND d.server_id=$1 AND d.plot_id=$2 AND d.starttime>=$3 AND d.starttime<=$4 GROUP BY sx, skey) as sq GROUP BY x, key;"))},
 
-               by_region                            = { rs <- try(dbSendQuery(dsccon, "PREPARE by_node                              (INTEGER, INTEGER, TIMESTAMPTZ, TIMESTAMPTZ, TEXT) AS           select to_timestamp((extract(epoch from sq.sx)::int / (extract(epoch from $4::timestamp - $3::timestamp + interval '1 minute')/1440)::int )*(extract(epoch from $4::timestamp - $3::timestamp + interval '1 minute')/1440)::int) AS x, sq.skey as key, avg(sq.sy) as y from (SELECT d.starttime AS sx, n.region AS skey, sum(d.value)/60.0 AS sy FROM dsc.data d, dsc.node n WHERE d.node_id = n.id AND d.server_id=$1 AND d.plot_id=$2 AND d.starttime>=$3 AND d.starttime<=$4 AND d.node_id = ANY (string_to_array($5, ',')::integer[]) GROUP BY sx, skey) as sq GROUP BY x, key;"))},
-               by_region_all_nodes                  = { rs <- try(dbSendQuery(dsccon, "PREPARE by_node_all_nodes                    (INTEGER, INTEGER, TIMESTAMPTZ, TIMESTAMPTZ) AS                 select to_timestamp((extract(epoch from sq.sx)::int / (extract(epoch from $4::timestamp - $3::timestamp + interval '1 minute')/1440)::int )*(extract(epoch from $4::timestamp - $3::timestamp + interval '1 minute')/1440)::int) AS x, sq.skey as key, avg(sq.sy) as y from (SELECT d.starttime AS sx, n.region AS skey, sum(d.value)/60.0 AS sy FROM dsc.data d, dsc.node n WHERE d.node_id = n.id AND d.server_id=$1 AND d.plot_id=$2 AND d.starttime>=$3 AND d.starttime<=$4 GROUP BY sx, skey) as sq GROUP BY x, key;"))},
-
+               by_region                            = { rs <- try(dbSendQuery(dsccon, "PREPARE by_region                            (INTEGER, INTEGER, TIMESTAMPTZ, TIMESTAMPTZ, TEXT) AS           select to_timestamp((extract(epoch from sq.sx)::int / (extract(epoch from $4::timestamp - $3::timestamp + interval '1 minute')/1440)::int )*(extract(epoch from $4::timestamp - $3::timestamp + interval '1 minute')/1440)::int) AS x, sq.skey as key, avg(sq.sy) as y from (SELECT d.starttime AS sx, CASE WHEN (n.region   = '' OR n.region   IS NULL) THEN 'Other'       ELSE n.region   END AS skey, sum(d.value)/60.0 AS sy FROM dsc.data d, dsc.node n WHERE d.node_id = n.id AND d.server_id=$1 AND d.plot_id=$2 AND d.starttime>=$3 AND d.starttime<=$4 AND d.node_id = ANY (string_to_array($5, ',')::integer[]) GROUP BY sx, skey) as sq GROUP BY x, key;"))},
+               by_region_all_nodes                  = { rs <- try(dbSendQuery(dsccon, "PREPARE by_region_all_nodes                  (INTEGER, INTEGER, TIMESTAMPTZ, TIMESTAMPTZ) AS                 select to_timestamp((extract(epoch from sq.sx)::int / (extract(epoch from $4::timestamp - $3::timestamp + interval '1 minute')/1440)::int )*(extract(epoch from $4::timestamp - $3::timestamp + interval '1 minute')/1440)::int) AS x, sq.skey as key, avg(sq.sy) as y from (SELECT d.starttime AS sx, CASE WHEN (n.region   = '' OR n.region   IS NULL) THEN 'Other'       ELSE n.region   END AS skey, sum(d.value)/60.0 AS sy FROM dsc.data d, dsc.node n WHERE d.node_id = n.id AND d.server_id=$1 AND d.plot_id=$2 AND d.starttime>=$3 AND d.starttime<=$4 GROUP BY sx, skey) as sq GROUP BY x, key;"))},
                by_instance                          = { rs <- try(dbSendQuery(dsccon, "PREPARE by_instance                          (INTEGER, INTEGER, TIMESTAMPTZ, TIMESTAMPTZ, TEXT) AS           select to_timestamp((extract(epoch from sq.sx)::int / (extract(epoch from $4::timestamp - $3::timestamp + interval '1 minute')/1440)::int )*(extract(epoch from $4::timestamp - $3::timestamp + interval '1 minute')/1440)::int) AS x, sq.skey as key, avg(sq.sy) as y from (SELECT d.starttime AS sx, CASE WHEN (n.subgroup = '' OR n.subgroup IS NULL) THEN 'No Instance' ELSE n.subgroup END AS skey, sum(d.value)/60.0 AS sy FROM dsc.data d, dsc.node n WHERE d.node_id = n.id AND d.server_id=$1 AND d.plot_id=$2 AND d.starttime>=$3 AND d.starttime<=$4 AND d.node_id = ANY (string_to_array($5, ',')::integer[]) GROUP BY sx, skey) as sq GROUP BY x, key;"))},
                by_instance_all_nodes                = { rs <- try(dbSendQuery(dsccon, "PREPARE by_instance_all_nodes                (INTEGER, INTEGER, TIMESTAMPTZ, TIMESTAMPTZ) AS                 select to_timestamp((extract(epoch from sq.sx)::int / (extract(epoch from $4::timestamp - $3::timestamp + interval '1 minute')/1440)::int )*(extract(epoch from $4::timestamp - $3::timestamp + interval '1 minute')/1440)::int) AS x, sq.skey as key, avg(sq.sy) as y from (SELECT d.starttime AS sx, CASE WHEN (n.subgroup = '' OR n.subgroup IS NULL) THEN 'No Instance' ELSE n.subgroup END AS skey, sum(d.value)/60.0 AS sy FROM dsc.data d, dsc.node n WHERE d.node_id = n.id AND d.server_id=$1 AND d.plot_id=$2 AND d.starttime>=$3 AND d.starttime<=$4 GROUP BY sx, skey) as sq GROUP BY x, key;"))},
                by_city                              = { rs <- try(dbSendQuery(dsccon, "PREPARE by_city                              (INTEGER, INTEGER, TIMESTAMPTZ, TIMESTAMPTZ, TEXT) AS           select to_timestamp((extract(epoch from sq.sx)::int / (extract(epoch from $4::timestamp - $3::timestamp + interval '1 minute')/1440)::int )*(extract(epoch from $4::timestamp - $3::timestamp + interval '1 minute')/1440)::int) AS x, sq.skey as key, avg(sq.sy) as y from (SELECT d.starttime AS sx, CASE WHEN (n.city     = '' OR n.city     IS NULL) THEN 'No City'     ELSE n.city     END AS skey, sum(d.value)/60.0 AS sy FROM dsc.data d, dsc.node n WHERE d.node_id = n.id AND d.server_id=$1 AND d.plot_id=$2 AND d.starttime>=$3 AND d.starttime<=$4 AND d.node_id = ANY (string_to_array($5, ',')::integer[]) GROUP BY sx, skey) as sq GROUP BY x, key;"))},
